--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "bchill",
     "description": "Under testing package",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "main": "./dist/index.js",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
@@ -25,6 +25,7 @@
         "typescript": "^5.0.0"
     },
     "dependencies": {
+        "@elysiajs/cors": "^1.1.1",
         "elysia": "^1.1.23",
         "mongoose": "^8.8.0",
         "redis": "^4.7.0",
